# basic-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: agent.md  examples.md  memory.md  overview.md  providers.md  structured-output.md  tools.md
examples/: jinja_template.py  simple_chat.py  structured_output.py  tool_use.py  with_memory.py  with_tracing.py
src/basic_agent/: __init__.py  agent.py  memory.py  models.py  provider.py  tools.py  tracing.py
tests/: test_agent.py  test_memory.py  test_models.py  test_provider.py  test_tools.py  test_tracing.py
